Replaced hard coded tests with parameterized